openshift/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: qsrp-frontend
  labels:
    app: qsrp
    component: frontend
spec:
  selector:
    app: qsrp
    component: frontend
  ports:
    - name: http
      port: 8080
      targetPort: 8080
      protocol: TCP
  type: ClusterIP
